--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,20 +30,13 @@ jobs:
         cache: maven
     - name: Build with Maven product catatlogue
       run: mvn -B package --file /NOUR-AMINE/Github-actions/productcatalogue/pom.xml
-    - name: Build with Maven shopfront
-      run: mvn -B package --file /NOUR-AMINE/Github-actions/shopfront/pom.xml
-    - name: Build with Maven Stockmanager
-      run: mvn -B package --file /NOUR-AMINE/Github-actions/stockmanager/pom.xml
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v5
-      with:
-        image: nouramine/testgit
-        registry: docker.io
-        push: true
-        
+    - name: Build Container image
+      run: docker build -t nouramine/testgit:product
+    -  name: Publish Docker image
+       run: docker push nouramine/testgit:product   
    
