--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven product catatlogue
-      run: mvn -B package --file 
+      run: mvn -B package --file pom.xml
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
