--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven product catatlogue
-      run: mvn -B package -f/--file/home/runner/work/Github-actions/productcatatlogue/pom.xml
+      run: mvn -B package -f/--file /home/runner/work/Github-actions/productcatatlogue/pom.xml
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
