--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,13 +30,15 @@ jobs:
         cache: maven
     - name: Build with Maven product catatlogue
       run: mvn -B package --file /home/runner/work/Github-actions/Github-actions/productcatalogue/pom.xml
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v3
       with:
         push: true
         tags: testgit/product:latest
