--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,8 +38,5 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: testgit/product:latest
+      run: docker build -t testgit/product -f /home/runner/work/Github-actions/Github-actions/productcatalogue/dockerfile.yml .
    
