--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,11 +32,13 @@ jobs:
       run: mvn -B package --file /home/runner/work/Github-actions/Github-actions/productcatalogue/pom.xml
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+    - name: Build and push docker image
+      uses: mr-smithers-excellent/docke-build-push@v3
       with:
+        image: nouramine/testgit
+        registry: docker.io
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push
-      run: docker build -t product:latest -f /var/lib/docker/tmp/buildkit-mount126576890/Dockerfile .
+    
+      
    
