--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,9 +38,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build Container image
-      run: docker build -t nouramine/testgit:product
-    - name: Publish Docker image
-      run: docker push nouramine/testgit:product   
+      run: docker build -t testgit/product:latest -f /home/runner/work/Github-actions/Github-actions/productcatalogue/Dockerfile .
     
       
    
