--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,8 @@ jobs:
         cache: maven
     - name: Build with Maven product catatlogue
       run: mvn -B package --file /home/runner/work/Github-actions/Github-actions/productcatalogue/pom.xml
+    - name: affichage  
+      run: ls -la
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Login to Docker Hub
