--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,17 +30,44 @@ jobs:
         cache: maven
     - name: Build with Maven product catatlogue
       run: mvn -B package --file productcatalogue/pom.xml
-    - name: affichage  
-      run: ls -la
+      
+    - name: Build with Maven shopfront
+      run: mvn -B package --file shopfront/pom.xml
+      
+    - name: Build with Maven Stockmanager
+      run: mvn -B package --file stockmanager/pom.xml
+      
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build Container image
+        
+    - name: Build docker image product
       run: docker build -t nouramine/product productcatalogue/
+      
+    - name: Build docker image shopfront
+      run: docker build -t nouramine/shop shopfront/
+      
+    - name: Build docker image stockmanager
+      run: docker build -t nouramine/stock stockmanager/
+
+    - name: affichage docker images
+      run: docker image ls
+
+    - name: Push docker image shopfront
+      run: docker push nouramine/shop
+
+    - name: Push docker image productcatalogue
+      run: docker push nouramine/product
+
+    - name: Push docker image stockmanager
+      run: docker push nouramine/stock
+  
+      
     
       
    
