--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: checkout repository 
@@ -32,11 +32,11 @@ jobs:
     - name: Build with Maven product catatlogue
       run: mvn -B package --file productcatalogue/pom.xml
       
-    #- name: Build with Maven Stockmanager
-     # run: mvn -B package --file stockmanager/pom.xml
+    - name: Build with Maven Stockmanager
+      run: mvn -B package --file stockmanager/pom.xml
 
-    #- name: Build with Maven shopfront
-     # run: mvn -B package --file shopfront/pom.xml
+    - name: Build with Maven shopfront
+      run: mvn -B package --file shopfront/pom.xml
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -50,23 +50,23 @@ jobs:
     - name: Build docker image product
       run: docker build -t nouramine/product productcatalogue/
       
-    #- name: Build docker image shopfront
-     # run: docker build -t nouramine/shop shopfront/
+    - name: Build docker image shopfront
+      run: docker build -t nouramine/shop shopfront/
       
-    #- name: Build docker image stockmanager
-     # run: docker build -t nouramine/stock stockmanager/
+    - name: Build docker image stockmanager
+      run: docker build -t nouramine/stock stockmanager/
 
     - name: affichage docker images
       run: docker image ls
 
-    #- name: Push docker image shopfront
-     # run: docker push nouramine/shop
+    - name: Push docker image shopfront
+      run: docker push nouramine/shop
 
     - name: Push docker image productcatalogue
       run: docker push nouramine/product
 
-    #- name: Push docker image stockmanager
-     # run: docker push nouramine/stock
+    - name: Push docker image stockmanager
+      run: docker push nouramine/stock
   
       
     
