--- a/kubernetes/shopfront-service.yaml
+++ b/kubernetes/shopfront-service.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: shopfront
-        image: pfedevops/shopfront:latest
+        image: nouramine/shop:latest
         ports:
         - containerPort: 8010
         livenessProbe:
